tests/files/parser_tests/should_fail/041.cmdr
//Should not parse due to multiple commands in one line
x = `echo hello` `git clone myurl.com`;